[package]
name = "obs-clip-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["obs-sys", "."]

[dependencies]
anyhow = "1.0.86"
image = "0.25.1"
obs-sys = { path = "./obs-sys" }
retour = "0.3.1"
winsafe = { git="https://github.com/Strackeror/winsafe", branch = "lastinputinfo", features = ["user", "kernel", "shell", "gui"] }
[lib]
crate-type = ["cdylib"]
